updated access modifier, new sh for java commands, new gradle task for building all:

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ version = '1.0'
 // Create JAR fill with application class + dependecies - JAR with all
 task buildFatJar(type: Jar) {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
-    baseName = project.name + '-all'
+    archiveBaseName = project.name + '-all'
     // classifier = 'all'
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
@@ -54,7 +54,7 @@ task buildFatJar(type: Jar) {
 // Create JAR fill with ONLY dependecies
 task buildFatJarWithDependsOnly(type: Jar) {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
-    baseName = project.name + '-dependencies'
+    archiveBaseName = project.name + '-dependencies'
     // classifier = 'all'
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
@@ -75,4 +75,12 @@ task buildZipForLayer(type: Zip) {
     from("build/libs/custom-api-utility-v2-dependencies-1.0.jar") {
       into "java/lib"
     }
+}
+
+// runs build to create main jar, and create dependencies jar and layer zip
+task buildAll {
+  dependsOn 'build'
+  dependsOn "buildFatJarWithDependsOnly"
+  dependsOn "buildZipForLayer"
+  tasks.findByName("buildZipForLayer").mustRunAfter "buildFatJarWithDependsOnly"
 }
